<resources>
    <string name="protocol">https://</string>
    <string name="domain">generic-game-service.herokuapp.com</string>
    <string name="base_path">/Game</string>
    <string name="create_game_path">/</string>
    <string name="join_game_path">/%1s/join</string>
    <string name="poll_game_path">/%1s/poll</string>
    <string name="update_game_path">/%1s/update</string>
    <string name="game_service_key">VRAkqMFGKS</string>
    <string name="tre_pa_rad_logo">Tre på rad logo</string>
    <string name="knots_and_crosses">knots and crosses</string>
    <string name="start">Start</string>
    <string name="join">Join</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">knots and crosses</string>
    <string name="player_name">Player name</string>
    <string name="game_id_hint">Id of game</string>
    <string name="game_id_placeholder">Game id</string>
    <string name="player_name_1_placeholder">Player Name 1</string>
    <string name="player_name_2_placeholder">Player Name 2</string>
    <string name="win_info_text">Winner is:</string>
    <string name="winning_player_placeholder">Name of Player</string>
    <string name="player2_info_text">Player2</string>
    <string name="player1_info_text">Player1</string>
</resources>