<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.knotsandcrosses.GameActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/gameIdInfoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/game_id_placeholder"
                    />
                <TextView
                    android:id="@+id/gameIdText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/game_id_placeholder"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">
                <TextView
                    android:id="@+id/player1InfoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/player1_info_text"
                    />
                <TextView
                    android:id="@+id/playerName1Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/player_name_1_placeholder"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/player2InfoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/player2_info_text"
                    />
                <TextView
                    android:id="@+id/playerName2Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/player_name_2_placeholder"
                    />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/square_00"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:layout_margin="4dp"/>

            <Button
                android:id="@+id/square_01"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:layout_margin="4dp"
                />

            <Button
                android:id="@+id/square_02"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:layout_margin="4dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/square_10"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:layout_margin="4dp"/>

            <Button
                android:id="@+id/square_11"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:layout_margin="4dp"
                />

            <Button
                android:id="@+id/square_12"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:layout_margin="4dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/square_20"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="" android:layout_margin="4dp"/>

            <Button
                android:id="@+id/square_21"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:layout_margin="4dp"/>

            <Button
                android:id="@+id/square_22"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:layout_margin="4dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>